5.3.2 -> 5.3.3:
    - jbj: ruby: fix: retrofit RSTRING_PTR/RSTRING_LEN into ruby-1.8.5.
    - jbj: solve: loop over solve db's in a bag.
    - jbj: solve: stub-in toy add/del methods.
    - jbj: solve: permit multiple solvedb's in a rpmbag.
    - jbj: solve: generalize %_dbpath to permit multiple rpmdb's.
    - jbj: solve: flip --aid "opt-in" behavior to --noaid "opt-out".
    - jbj: solve: fix: don't free the package file name when depsolving.
    - jbj: fix: debugedit produce empty list file on MIPS.

5.3.1 -> 5.3.2:
    - jbj: pgp: fix: algo parameters to signature/pubkey with msbits().
    - jbj: pgp: use the pubkey from header when installing.
    - jbj: pgp: retrieve pubkey from package header (if present).
    - jbj: pgp: add pgpArmorUnwrap to parse a pubkey from a buffer.
    - jbj: i18n: update po files (Translation Project).
    - jbj: fix: handle the V4 signature plaintext correctly.
    - jbj: add the DSA pubkey/signature to all packages produced by rpmbuild.
    - jbj: bc: disable DSA signhash16 checks for now.
    - jbj: bc: convert DSA digest from binary, no hex needed.
    - jbj: pgp: stub-in a pubkey octet pointer/length.
    - jbj: pgp: fix: expiry subpkts are relative, not absolute.
    - jbj: auto-sign all built packages with a non-repudiable DSA keypair.
    - jbj: ltc: implement RSA/DSA/ECDSA methods (RSA still has issues).
    - jbj: crypto: add --usecrypto options for libtomcrypt/cdsa.
    - jbj: crypto: stub in wrappers for libtomcrypt & Apple CDSA.
    - jbj: autofu: detect libtomcrypt (needs custom-crafted tomcrypt.pc).
    - jbj: pgp: add ECDSA generate/sign/verify tests using gcrypt/openssl.
    - jbj: pgp: buff the chrome.
    - jbj: nss: add a strerror to decode errors to something meaningful.
    - jbj: nss: generate "real" PQG params for DSA.
    - jbj: nss: add RSA/DSA sign/generate methods.
    - jbj: ssl: resurrect RSA verification. RSA breaks my brain every time.
    - jbj: ssl: add RSA/DSA sign/generate methods.